@@ -4,10 +4,12 @@ New in master
 Features
 --------
 
-* Added Albanian translation by Vango Stavro
+* Support ``doc`` shortcode (equivalent to reST ``doc`` role — part of
+  Issue #2170)
+* Albanian translation by Vango Stavro
 * Added ``post-(type)`` class to ``story.tmpl`` (uses the ``type``
   meta field, defaults to ``post-text`` — same behavior as posts)
-* Added ``compiled`` signal after post is compiled (Issue #2369)
+* New ``compiled`` signal after post is compiled (Issue #2369)
 
 Bugfixes
 --------
